<resources>
    <string name="app_name">Know it Owl</string>
    <string name="btn_start_learning">Start Learning</string>
    <string name="btn_start_admin">Administration</string>
    <string name="btn_start_statistic">Statistics</string>
    <string name="btn_start_settings">Settings</string>
    <string name="btn_start_help">Help/About</string>
    <string name="btn_admin_new_card_new_stack">New Stack</string>
    <string name="btn_admin_new_card_existing_stack">Existing Stack</string>
    <string name="btn_admin_delete_stack">Delete Stack</string>
    <string name="menu_learning">Learning Menu</string>
    <string name="menu_admin">Administration Menu</string>
    <string name="menu_statistics">Statistics Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_start_screen">Home</string>
    <string name="btn_learn_dynstack">Create dynamic Stack</string>
    <string name="list_learn_stacklist">Please choose your Stack:</string>
    <string name="tab_learn_backside">Go to Back Side</string>
    <string name="tab_learn_frontside">Go to Front Side</string>
    <string name="btn_learn_sure">Sure</string>
    <string name="btn_learn_notsure">Not sure</string>
    <string name="btn_learn_dontknow">Do not know</string>
    <string name="btn_admin_newcard">New Card/Stack</string>
    <string name="btn_admin_editcard">Edit Card</string>
    <string name="btn_admin_delete_card">Delete Card</string>
    <string name="btn_admin_editstack">Edit Stack</string>
    <string name="btn_admin_importexport">Import/Export</string>
    <string name="btn_admin_newdynstack">New dyn Stack</string>
    <string name="btn_admin_create_dynamic_stack">Create dyn. Stack</string>
    <string name="btn_admin_update_dynstack">Update dyn Stack</string>
    <string name="btn_admin_exist">Exist</string>
    <string name="btn_admin_new">New</string>
    <string name="list_admin_stacklist">Please choose your Stack:</string>
    <string name="list_admin_cardlist">Please choose your Card:</string>
    <string name="btn_admin_save">save</string>
    <string name="btn_admin_reset_stack">Reset Stack</string>
    <string name="btn_admin_create">save</string>
    <string name="btn_admin_import">Import</string>
    <string name="btn_admin_export">Export</string>
    <string name="tab_statistics_overview">Overview</string>
    <string name="list_statistics_stacklist">Please choose your Stack:</string>
    <string name="tab_statistics_progress">Progress</string>
    <string name="tab_statistics_lastreview">Last review</string>
    <string name="label_settings_setreminder">Set Reminder</string>
    <string name="label_settings_resetdatabase">Reset Database</string>
    <string name="label_settings_setfontsize">Set Font Size</string>
    <string name="btn_help_introduction">Introduction</string>
    <string name="btn_help_learnstatistics">Learn/Statistics</string>
    <string name="btn_help_editcardsstacks">Edit Cards/Stacks</string>
    <string name="btn_help_settings">Settings</string>
    <string name="btn_help_importexport">Import/Export</string>
    <string name="title_activity_learning_screen">Learn</string>
    <string name="title_activity_help_screen">Help/About</string>
    <string name="title_activity_help_screen_introduction">Help - Introduction</string>
    <string name="title_activity_help_screen_learn_statistics">Help - Learn/Statistics</string>
    <string name="title_activity_help_screen_edit_cards_stacks">Help - Edit Cards/Stacks</string>
    <string name="title_activity_help_screen_settings">Help - Settings</string>
    <string name="title_activity_help_screen_import_export">Help - Import/Export</string>
    <string name="title_activity_help_screen_about">Help - About</string>
    <string name="title_activity_admin_screen">Administration</string>
    <string name="title_activity_admin_new_card_choose_stack_screen">Choose Stack</string>
    <string name="title_activity_admin_new_stack">New Stack</string>
    <string name="title_activity_stapel_screen">Select Stack</string>
    <string name="title_activity_show_card_front">Card Front</string>
    <string name="btn_learn_back">Backside</string>
    <string name="show_learn_card_front">Default Card Front</string>
    <string name="show_learn_counter">x/xx</string>
    <string name="title_activity_show_card_back">Card Back</string>
    <string name="btn_learn_front">Frontside</string>
    <string name="show_learn_card_back">Default Card Back</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_admin_edit_stack">Edit Stack</string>
    <string name="title_activity_admin_choose_stack_screen">Select Stack</string>
    <string name="statistics_screen_tab_overview">Overview</string>
    <string name="statistics_screen_tab_progress">Progress</string>
    <string name="statistics_screen_tab_lastreview">Last Review</string>
    <string name="title_activity_statistics_screen">Statistics</string>
    <string name="admin_screen_tab_card_front">Card Front</string>
    <string name="admin_screen_tab_card_back">Card Back</string>
    <string name="admin_screen_tab_card_tags">Card Tags</string>
    <string name="title_activity_new_card">New Card</string>
    <string name="learning_screen_tab_card_back">Card Back</string>
    <string name="learning_screen_tab_card_front">Card Front</string>
    <string name="title_activity_learning_card">Learning</string>
    <string name="title_activity_admin_import_export">Import/Export</string>
    <string name="title_activity_admin_create_dyn_stack">New dynamic Stack</string>
    <string name="admin_export">Export</string>
    <string name="admin_import">Import</string>
    <string name="content_start_screen_logo">know it owl Logo</string>
    <string name="title_activity_progress">know-it-Owl</string>
    <string name="title_activity_admin_edit_card">Edit Card</string>
    <string name="title_activity_admin_create_dynamic_stack">Create Dynamic Stack</string>
    <string name="title_activity_admin_edit_dynamic_stack">Create Dynamic Stack</string>
    <string name="error_handler_delete_db">Delete Database?</string>
    <string name="error_handler_general">An Error has occurred</string>
    <string name="error_handler_import_error">Import Error</string>
    <string name="error_handler_name_taken">Name already exists</string>
    <string name="error_handler_no_sd">No SD Card available</string>
    <string name="error_handler_no_input">Please insert a name</string>
    <string name="error_handler_no_tag">No Tags selected</string>
    <string name="error_handler_file_not_found">File not found</string>
    <string name="error_handler_export_error">Export Error</string>
    <string name="text_help_introduction">Know it Owl helps you to organize your learning cards for school, university or for fun. You are always informed of your learning progress. You can exchange know-how in terms of pictures, text, videos or easily in terms of links. Share your learning cards/ knowledge with your friends and profit from theirs. That is the way how you can know it All/Owl.</string>
    <string name="text_help_learn_statistics">When you want to track your learning progress you can see the statistics in two ways: \n \n At the end of each learning-round you are automatically shown your recent learning results in the tab LAST REVIEW also available out of the STATISTICS menu.There you see the duration of the learning process and you have the comparison of your recent to your last learning results concerning how many cards you did not know(dn), how many cards you were not sure(ns) about and how many cards you were sure(s) about. \n \n Second way is to click on the main menu point STATISTICS, where first of all you get an overview of the number of all cards of every stack you did not know, you were not sure about and you were sure about. In the next step you can choose a certain stack and then you only get the number of cards (for dn, ns and s) for the specific stack. In the next tab PROGRESS it is shown the last (at a maximum of 10) learning results of the different learning trials for the chosen stack. The last tab LAST REVIEW is already described before. :)  </string>
    <string name="text_help_settings">With the functionality SETTINGS (same name in the main menu), you are able to do 5 things. \n \n You can RESET your whole DATABASE with all your learning stacks you created before, \n \n or you only RESET all your given ANSWERS of every learning-round in every stack to start learning from the whole beginning with all cards. If you only want to manipulate one learning stack and not all, you can edit or delete it in the ADMINISTRATION main menu point and then select EDIT STACK. Important to mention is that by RESETING your ANSWERS, the STATISTICS data is not influenced. That means that your learning progress will be recorded further. \n \n That is why you need to push the button RESET STATISTICS when you also want to start a new learning progress in the STATISTICS. \n \n Next thing you can do is CLEANING UP all your taken PICTURES at once by clicking CLEAN UP PICTURES. \n \n At last you have the choice to generate test Data for you first walk trough to become comfortable with the handling of Know it Owl.</string>
    <string name="text_help_import_export">If you want to share your learning cards with friends or make a data back-up you can export or import learning cards as follows: Push the button ADMINISTRATION and after that select IMPORT/EXPORT. \n \n You have the choice to export a stack in 2 ways: \n \n a) If you switch to the tab EXPORT you can export by longer touching a specific stack. If you want to export multiple stacks at once, you better create a dynamic stack before with all the stacks included. Therefore you go to the main menu point ADMINISTRATION and then choose NEW DYN STACK. \n For exporting a chosen stack you can select whether your data in the form of a xml-file should be transferred to your Dropbox account, to another gadget over Bluetooth or wi-fi direct or you are able to send your data to your or another one’s email account. \n To make sure that your data is exported correctly you can see all successfully transferred exports in the tab IMPORT. The IMPORT side serves as an archive. \n \n b) You also can export a stack by going to ADMINISTRATION, then EDIT STACK, then longer touching the stack item and at last pushing ARCHIVE. \n \n You have the choice to import a stack also in 2 ways: \n \n a) From the IMPORT tab you can import a stack again, if you have exported it before you potentially deleted it under ADMINSISTRATION, then EDIT STACK, DELETE. \n \n b) When you received a learning stack in the form of a xml-file from a friend, for IMPORTING you need to directly open your xml-file with Know it Owl (Open With…). The imported xml-file will be saved automatically and you can START  LEARNING with the new stack in the main menu. </string>
    <string name="text_choose_stack">Choose Stack:</string>
    <string name="text_acutal_status">Actual Status:</string>
    <string name="text_no_data_available">No Data Available</string>
    <string name="text_total_time">Total Time:</string>
    <string name="text_number_of_cards"># of Cards:</string>
</resources>