<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_start_screen"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_start_screen"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_help"/>
    <item
        android:id="@+id/btn_admin_edit_stack_save"
        android:icon="@drawable/save"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_admin_save"/>
    <item
        android:id="@+id/btn_admin_edit_reset_stack"
        android:icon="@drawable/refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_admin_reset_stack"/>
    <item
        android:id="@+id/btn_admin_edit_delete_stack"
        android:icon="@drawable/cancel"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_admin_delete_stack"/>

</menu>