<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/btn_admin_new_card_new_stack"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_admin_new_card_new_stack"/>
    <item
        android:id="@+id/btn_admin_new_card_existing_stack"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_admin_new_card_existing_stack"/>
    <item
        android:id="@+id/menu_start_screen"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_start_screen"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:icon="@drawable/options"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_help"
        android:orderInCategory="100"
        android:icon="@drawable/help"
        android:showAsAction="never"
        android:title="@string/menu_help"/>

</menu>