<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/btn_learning_card_front_sure"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_learn_sure"/>
    <item
        android:id="@+id/btn_learning_card_front_notSure"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_learn_notsure"/>
    <item
        android:id="@+id/btn_learning_card_front_dontKnow"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/btn_learn_dontknow"/>
    <item
        android:id="@+id/btn_admin_edit_card"
        android:orderInCategory="100"       
        android:showAsAction="never"
        android:title="@string/btn_admin_editcard"/>

</menu>