<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_help_introduction"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/mediaplayer"
        android:text="@string/btn_help_introduction" />

    <Button
        android:id="@+id/btn_help_learnstatistics"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/statistics"
        android:text="@string/btn_help_learnstatistics" />

    <Button
        android:id="@+id/btn_help_editcardsstacks"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/design"
        android:text="@string/btn_help_editcardsstacks" />

    <Button
        android:id="@+id/btn_help_settings"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/gear"
        android:text="@string/btn_help_settings" />

    <Button
        android:id="@+id/btn_help_importexport"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/impexport"
        android:drawablePadding="3dp"
        android:text="@string/btn_help_importexport" />

</LinearLayout>