<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AdminScreen" >

    <Button
        android:id="@+id/btn_admin_new_card_new_stack"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/plus"
        android:text="@string/btn_admin_newcard" />

    <Button
        android:id="@+id/btn_admin_edit_stack"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/design"
        android:text="@string/btn_admin_editstack" />

    <Button
        android:id="@+id/btn_admin_import_export"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/impexport"
        android:text="@string/btn_admin_importexport" />

    <Button
        android:id="@+id/btn_admin_new_dyn_stack"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/dynamicstack"
        android:text="@string/btn_admin_newdynstack" />

    <Button
        android:id="@+id/btn_admin_update_dyn_stack"
        style="@style/style_iconButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/refresh"
        android:text="@string/btn_admin_update_dynstack" />

</LinearLayout>