<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" 
    android:layout_marginTop="25dp">

    <TextView
        android:id="@+id/lbl_app_name_start_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_start_learning"
        style="@style/style_iconButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableTop="@drawable/learning"
        android:text="@string/btn_start_learning" />

    <GridLayout
        android:id="@+id/GridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="3" >

        <Button
            android:id="@+id/btn_start_admin"
            style="@style/style_iconButton2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/admin"
            android:text="@string/btn_start_admin"
            android:layout_column="0"
            android:layout_row="0" />
        
        <Button
            android:id="@+id/btn_start_statistic"
            style="@style/style_iconButton2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/statistics"
            android:text="@string/btn_start_statistic"
            android:layout_column="2"
            android:layout_row="0" />

        <Button
            android:id="@+id/btn_start_settings"
            style="@style/style_iconButton2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/settings"
            android:text="@string/btn_start_settings"
            android:layout_column="0"
            android:layout_row="2" />
        
        <Button
            android:id="@+id/btn_start_help"
            style="@style/style_iconButton2"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/help"
            android:text="@string/btn_start_help"
            android:layout_column="2"
            android:layout_row="2" />
        
    </GridLayout>

</LinearLayout>