<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="16dp" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4" >

        <TextView
            android:id="@+id/textView3"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_row="1"
            android:text="@string/text_choose_stack"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/lbl_statistics_overview_stackSpinner"
            android:layout_width="180dp"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_row="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_column="1"
            android:layout_gravity="left|bottom"
            android:layout_marginTop="12dp"
            android:layout_row="2"
            android:text="@string/text_total_time"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lbl_statistics_overview_totalDuration"
            android:layout_width="180dp"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginTop="12dp"
            android:layout_row="2"
            android:text="@string/text_no_data_available"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_row="4"
            android:text="@string/text_number_of_cards"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/lbl_statistics_overview_totalNumberOfCards"
            android:layout_width="180dp"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:layout_gravity="left"
            android:layout_marginTop="12dp"
            android:layout_row="4"
            android:text="@string/text_no_data_available"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginTop="12dp"
            android:layout_row="5"
            android:text="@string/text_acutal_status"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginTop="12dp"
            android:layout_row="7"
            android:text="@string/text_dont_know:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lbl_statistics_overview_dontKnow"
            android:layout_column="3"
            android:layout_gravity="left|bottom"
            android:layout_row="7"
            android:text="@string/text_no_data_available"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView6"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:layout_row="9"
            android:text="@string/text_not_sure:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lbl_statistics_overview_notSure"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:layout_row="9"
            android:text="@string/text_no_data_available"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView7"
            android:layout_column="1"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:layout_row="11"
            android:text="@string/text_sure:"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/lbl_statistics_overview_sure"
            android:layout_column="3"
            android:layout_gravity="left"
            android:layout_marginTop="6dp"
            android:layout_row="11"
            android:text="@string/text_no_data_available"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </GridLayout>

</LinearLayout>